--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-# .gitignore
+# Node
 frontend/node_modules/
 frontend/dist/
+
+# Python
 backend/venv/
-*.pyc
 __pycache__/
-.env
+*.pyc
+
+# Secrets
+*.env
 algoblocks.db
