--- a/algoblocks-frontend/package.json
+++ b/algoblocks-frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "lucide-react": "^0.488.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
